--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
     testRuntimeOnly group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.7.0")
 
 }
 
